--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109116db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "0bb6bbdd",
    "metadata": {},
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -39,13 +47,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Hello, Sharath\n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Hello, Sharath')"
    ]
   },
   {
@@ -71,10 +79,18 @@
     "2. Add your name below using Markdown syntax:\n",
     "\n",
     "### Your Name\n",
-    "John Doe\n",
+    "Sharath\n",
     "\n",
     "3. Press **Shift + Enter** to render the Markdown."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6066d983",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -112,6 +128,15 @@
     "1. Practice these shortcuts by inserting a new cell below.\n",
     "2. Change the cell type to Markdown and add a heading: `# JupyterLab Shortcuts`.\n",
     "3. Run the cell to render it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24111f4f",
+   "metadata": {},
+   "source": [
+    "# JupiterLab Shortcuts\n",
+    "\n"
    ]
   },
   {
@@ -159,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
